# serializer version: 1
# name: test_wlua[common.xml-command_long_over_tcp.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 1, Ack: 1, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 246
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: COMMAND_LONG (76)
          Payload: COMMAND_LONG (76)
              target_system (uint8_t): 1
              target_component (uint8_t): 1
              command (MAV_CMD): MAV_CMD_DO_SET_MODE (176)
              confirmation (uint8_t): 1
              param1: Mode (MAV_MODE_FLAG): 0x00000001 (1)
                  .... ...1 = MAV_MODE_FLAG_CUSTOM_MODE_ENABLED: True
                  .... ..0. = MAV_MODE_FLAG_TEST_ENABLED: False
                  .... .0.. = MAV_MODE_FLAG_AUTO_ENABLED: False
                  .... 0... = MAV_MODE_FLAG_GUIDED_ENABLED: False
                  ...0 .... = MAV_MODE_FLAG_STABILIZE_ENABLED: False
                  ..0. .... = MAV_MODE_FLAG_HIL_ENABLED: False
                  .0.. .... = MAV_MODE_FLAG_MANUAL_INPUT_ENABLED: False
                  0... .... = MAV_MODE_FLAG_SAFETY_ARMED: False
              param2: Custom Mode (float): 5
              param3: Custom Submode (float): 0
              param4 (float): 0
              param5 (float): 0
              param6 (float): 0
              param7 (float): 0
          Message CRC: 0xdb93
      
      Frame 2: 138 bytes on wire (1104 bits), 138 bytes captured (1104 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 1, Ack: 46, Len: 82
      MAVLink Protocol (82)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 218
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: COMMAND_ACK (77)
          Payload: COMMAND_ACK (77)
              command (MAV_CMD): MAV_CMD_DO_SET_MODE (176)
              result (MAV_RESULT): MAV_RESULT_FAILED (4)
          Message CRC: 0x7692
      MAVLink Protocol (82)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 48
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 219
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: STATUSTEXT (253)
          Payload: STATUSTEXT (253)
              severity (MAV_SEVERITY): MAV_SEVERITY_WARNING (4)
              text (char): Mode change to LOITER failed: requires position
          Message CRC: 0x647a
      
      Frame 3: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 706, Ack: 12611, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 11
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: COMMAND_LONG (76)
          Payload: COMMAND_LONG (76)
              target_system (uint8_t): 1
              target_component (uint8_t): 1
              command (MAV_CMD): MAV_CMD_COMPONENT_ARM_DISARM (400)
              confirmation (uint8_t): 1
              param1: Arm (MAV_BOOL): 0x00000000 (0)
                  ...0 = MAV_BOOL_TRUE: False
              param2: Force (float): 0
              param3 (float): 0
              param4 (float): 0
              param5 (float): 0
              param6 (float): 0
              param7 (float): 0
          Message CRC: 0xf9df
      
      Frame 4: 144 bytes on wire (1152 bits), 144 bytes captured (1152 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 12611, Ack: 751, Len: 88
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 71
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: COMMAND_ACK (77)
          Payload: COMMAND_ACK (77)
              command (MAV_CMD): MAV_CMD_COMPONENT_ARM_DISARM (400)
              result (MAV_RESULT): MAV_RESULT_ACCEPTED (0)
          Message CRC: 0x1878
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 17
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 72
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: STATUSTEXT (253)
          Payload: STATUSTEXT (253)
              severity (MAV_SEVERITY): MAV_SEVERITY_INFO (6)
              text (char): Disarming motors
          Message CRC: 0x570a
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 25
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 73
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: PARAM_VALUE (22)
          Payload: PARAM_VALUE (22)
              param_id (char): MOT_THST_HOVER
              param_value (float): 0.39
              param_type (MAV_PARAM_TYPE): MAV_PARAM_TYPE_REAL32 (9)
              param_count (uint16_t): 1305
              param_index (uint16_t): 65535
          Message CRC: 0xf478
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-common.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 1, Ack: 1, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 246
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: COMMAND_LONG (76)
          Payload: COMMAND_LONG (76)
              target_system (uint8_t): 1
              target_component (uint8_t): 1
              command (MAV_CMD): MAV_CMD_DO_SET_MODE (176)
              confirmation (uint8_t): 1
              param1: Mode (MAV_MODE_FLAG): 0x00000001 (1)
                  .... ...1 = MAV_MODE_FLAG_CUSTOM_MODE_ENABLED: True
                  .... ..0. = MAV_MODE_FLAG_TEST_ENABLED: False
                  .... .0.. = MAV_MODE_FLAG_AUTO_ENABLED: False
                  .... 0... = MAV_MODE_FLAG_GUIDED_ENABLED: False
                  ...0 .... = MAV_MODE_FLAG_STABILIZE_ENABLED: False
                  ..0. .... = MAV_MODE_FLAG_HIL_ENABLED: False
                  .0.. .... = MAV_MODE_FLAG_MANUAL_INPUT_ENABLED: False
                  0... .... = MAV_MODE_FLAG_SAFETY_ARMED: False
              param2: Custom Mode (float): 5
              param3: Custom Submode (float): 0
              param4 (float): 0
              param5 (float): 0
              param6 (float): 0
              param7 (float): 0
          Message CRC: 0xdb93
      
      Frame 2: 138 bytes on wire (1104 bits), 138 bytes captured (1104 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 1, Ack: 46, Len: 82
      MAVLink Protocol (82)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 218
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: COMMAND_ACK (77)
          Payload: COMMAND_ACK (77)
              command (MAV_CMD): MAV_CMD_DO_SET_MODE (176)
              result (MAV_RESULT): MAV_RESULT_FAILED (4)
          Message CRC: 0x7692
      MAVLink Protocol (82)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 48
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 219
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: STATUSTEXT (253)
          Payload: STATUSTEXT (253)
              severity (MAV_SEVERITY): MAV_SEVERITY_WARNING (4)
              text (char): Mode change to LOITER failed: requires position
          Message CRC: 0x647a
      
      Frame 3: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 706, Ack: 12611, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 11
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: COMMAND_LONG (76)
          Payload: COMMAND_LONG (76)
              target_system (uint8_t): 1
              target_component (uint8_t): 1
              command (MAV_CMD): MAV_CMD_COMPONENT_ARM_DISARM (400)
              confirmation (uint8_t): 1
              param1: Arm (MAV_BOOL): 0x00000000 (0)
                  ...0 = MAV_BOOL_TRUE: False
              param2: Force (float): 0
              param3 (float): 0
              param4 (float): 0
              param5 (float): 0
              param6 (float): 0
              param7 (float): 0
          Message CRC: 0xf9df
      
      Frame 4: 144 bytes on wire (1152 bits), 144 bytes captured (1152 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 12611, Ack: 751, Len: 88
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 71
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: COMMAND_ACK (77)
          Payload: COMMAND_ACK (77)
              command (MAV_CMD): MAV_CMD_COMPONENT_ARM_DISARM (400)
              result (MAV_RESULT): MAV_RESULT_ACCEPTED (0)
          Message CRC: 0x1878
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 17
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 72
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: STATUSTEXT (253)
          Payload: STATUSTEXT (253)
              severity (MAV_SEVERITY): MAV_SEVERITY_INFO (6)
              text (char): Disarming motors
          Message CRC: 0x570a
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 25
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 73
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: PARAM_VALUE (22)
          Payload: PARAM_VALUE (22)
              param_id (char): MOT_THST_HOVER
              param_value (float): 0.39
              param_type (MAV_PARAM_TYPE): MAV_PARAM_TYPE_REAL32 (9)
              param_count (uint16_t): 1305
              param_index (uint16_t): 65535
          Message CRC: 0xf478
      
  
    ''',
  })
# ---
# name: test_wlua[minimal.xml-common.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 1, Ack: 1, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 246
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: Unknown (76)
          [Expert Info (Error/Malformed): Unknown message type]
              [Unknown message type]
              [Severity level: Error]
              [Group: Malformed]
          Unparsable payload: 0000803f0000a04000000000000000000000000000000000
          Message CRC: 0xdb93
      
      Frame 2: 138 bytes on wire (1104 bits), 138 bytes captured (1104 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 1, Ack: 46, Len: 82
      MAVLink Protocol (82)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 218
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: Unknown (77)
          [Expert Info (Error/Malformed): Unknown message type]
              [Unknown message type]
              [Severity level: Error]
              [Group: Malformed]
          Unparsable payload: b000040000000000fafa9276fd300000db0101fd0000044d
          Message CRC: 0x647a
      
      Frame 3: 101 bytes on wire (808 bits), 101 bytes captured (808 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 62025, Dst Port: 5760, Seq: 706, Ack: 12611, Len: 45
      MAVLink Protocol (45)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 33
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 11
              System id: 250
              Component id: MAV_COMP_ID_SYSTEM_CONTROL (250)
              Message id: Unknown (76)
          [Expert Info (Error/Malformed): Unknown message type]
              [Unknown message type]
              [Severity level: Error]
              [Group: Malformed]
          Unparsable payload: 000000000000000000000000000000000000000000000000
          Message CRC: 0xf9df
      
      Frame 4: 144 bytes on wire (1152 bits), 144 bytes captured (1152 bits) on interface lo0, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 5760, Dst Port: 62025, Seq: 12611, Ack: 751, Len: 88
      MAVLink Protocol (88)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 10
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 71
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: Unknown (77)
          [Expert Info (Error/Malformed): Unknown message type]
              [Unknown message type]
              [Severity level: Error]
              [Group: Malformed]
          Unparsable payload: 9001000000000000fafa7818fd110000480101fd00000644
          Message CRC: 0xf478
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-autopilot_version.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 131 bytes on wire (1048 bits), 131 bytes captured (1048 bits) on interface lo, id 0
      Ethernet II, Src: 00:00:00:00:00:00, Dst: 00:00:00:00:00:00
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      User Datagram Protocol, Src Port: 34942, Dst Port: 18570
      MAVLink Protocol (89)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 77
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 219
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: AUTOPILOT_VERSION (148)
          Payload: AUTOPILOT_VERSION (148)
              capabilities (MAV_PROTOCOL_CAPABILITY): 0x000000000000f36f (62319)
                  .... .... .... .... .... ...1 = MAV_PROTOCOL_CAPABILITY_MISSION_FLOAT: True
                  .... .... .... .... .... ..1. = MAV_PROTOCOL_CAPABILITY_PARAM_FLOAT: True
                  .... .... .... .... .... .1.. = MAV_PROTOCOL_CAPABILITY_MISSION_INT: True
                  .... .... .... .... .... 1... = MAV_PROTOCOL_CAPABILITY_COMMAND_INT: True
                  .... .... .... .... ...0 .... = MAV_PROTOCOL_CAPABILITY_PARAM_ENCODE_BYTEWISE: False
                  .... .... .... .... ..1. .... = MAV_PROTOCOL_CAPABILITY_FTP: True
                  .... .... .... .... .1.. .... = MAV_PROTOCOL_CAPABILITY_SET_ATTITUDE_TARGET: True
                  .... .... .... .... 0... .... = MAV_PROTOCOL_CAPABILITY_SET_POSITION_TARGET_LOCAL_NED: False
                  .... .... .... ...1 .... .... = MAV_PROTOCOL_CAPABILITY_SET_POSITION_TARGET_GLOBAL_INT: True
                  .... .... .... ..1. .... .... = MAV_PROTOCOL_CAPABILITY_TERRAIN: True
                  .... .... .... .0.. .... .... = MAV_PROTOCOL_CAPABILITY_RESERVED3: False
                  .... .... .... 0... .... .... = MAV_PROTOCOL_CAPABILITY_FLIGHT_TERMINATION: False
                  .... .... ...1 .... .... .... = MAV_PROTOCOL_CAPABILITY_COMPASS_CALIBRATION: True
                  .... .... ..1. .... .... .... = MAV_PROTOCOL_CAPABILITY_MAVLINK2: True
                  .... .... .1.. .... .... .... = MAV_PROTOCOL_CAPABILITY_MISSION_FENCE: True
                  .... .... 1... .... .... .... = MAV_PROTOCOL_CAPABILITY_MISSION_RALLY: True
                  .... ...0 .... .... .... .... = MAV_PROTOCOL_CAPABILITY_RESERVED2: False
                  .... ..0. .... .... .... .... = MAV_PROTOCOL_CAPABILITY_PARAM_ENCODE_C_CAST: False
                  .... .0.. .... .... .... .... = MAV_PROTOCOL_CAPABILITY_COMPONENT_IMPLEMENTS_GIMBAL_MANAGER: False
                  .... 0... .... .... .... .... = MAV_PROTOCOL_CAPABILITY_COMPONENT_ACCEPTS_GCS_CONTROL: False
                  ...0 .... .... .... .... .... = MAV_PROTOCOL_CAPABILITY_GRIPPER: False
              flight_sw_version (uint32_t): 67307007
              middleware_sw_version (uint32_t): 0
              os_sw_version (uint32_t): 0
              board_version (uint32_t): 0
              flight_custom_version[0] (uint8_t): 51
              flight_custom_version[1] (uint8_t): 98
              flight_custom_version[2] (uint8_t): 102
              flight_custom_version[3] (uint8_t): 54
              flight_custom_version[4] (uint8_t): 100
              flight_custom_version[5] (uint8_t): 55
              flight_custom_version[6] (uint8_t): 97
              flight_custom_version[7] (uint8_t): 99
              middleware_custom_version[0] (uint8_t): 0
              middleware_custom_version[1] (uint8_t): 0
              middleware_custom_version[2] (uint8_t): 0
              middleware_custom_version[3] (uint8_t): 0
              middleware_custom_version[4] (uint8_t): 0
              middleware_custom_version[5] (uint8_t): 0
              middleware_custom_version[6] (uint8_t): 0
              middleware_custom_version[7] (uint8_t): 0
              os_custom_version[0] (uint8_t): 0
              os_custom_version[1] (uint8_t): 0
              os_custom_version[2] (uint8_t): 0
              os_custom_version[3] (uint8_t): 0
              os_custom_version[4] (uint8_t): 0
              os_custom_version[5] (uint8_t): 0
              os_custom_version[6] (uint8_t): 0
              os_custom_version[7] (uint8_t): 0
              vendor_id (uint16_t): 0
              product_id (uint16_t): 0
              uid (uint64_t): 0
          Message CRC: 0xfcfc
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-gps_global_origin.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 70 bytes on wire (560 bits), 70 bytes captured (560 bits) on interface lo, id 0
      Ethernet II, Src: 00:00:00:00:00:00, Dst: 00:00:00:00:00:00
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      User Datagram Protocol, Src Port: 57304, Dst Port: 14550
      MAVLink Protocol (28)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 16
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 110
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: GPS_GLOBAL_ORIGIN (49)
          Payload: GPS_GLOBAL_ORIGIN (49)
              latitude (int32_t) [degE7]: 517015586 (51.7015586 deg)
              longitude (int32_t) [degE7]: -3332886 (-0.3332886 deg)
              altitude (int32_t) [mm]: 56990
          Message CRC: 0xffcc
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-mission_item_int.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 115 bytes on wire (920 bits), 115 bytes captured (920 bits) on interface lo, id 0
      Ethernet II, Src: 00:00:00:00:00:00, Dst: 00:00:00:00:00:00
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      Transmission Control Protocol, Src Port: 54026, Dst Port: 5760, Seq: 1, Ack: 1, Len: 49
      MAVLink Protocol (49)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 37
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 153
              System id: 255
              Component id: Unknown (230)
              Message id: MISSION_ITEM_INT (73)
          Payload: MISSION_ITEM_INT (73)
              target_system (uint8_t): 1
              target_component (uint8_t): 1
              seq (uint16_t): 7
              frame (MAV_FRAME): MAV_FRAME_GLOBAL_RELATIVE_ALT (3)
              command (MAV_CMD): MAV_CMD_NAV_VTOL_LAND (85)
              current (uint8_t): 0
              autocontinue (uint8_t): 1
              param1: Land Options (NAV_VTOL_LAND_OPTIONS): NAV_VTOL_LAND_OPTIONS_DEFAULT (0)
              param2 (float): 0
              param3: Approach Altitude (float) m: 0
              param4: Yaw (float) deg: 0
              x: Latitude (int32_t): 514775152
              y: Longitude (int32_t): -25939161
              z: Ground Altitude (float) m: 0
          Message CRC: 0x4bdc
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-gps_raw_int.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 97 bytes on wire (776 bits), 97 bytes captured (776 bits) on interface lo, id 0
      Ethernet II, Src: 00:00:00:00:00:00, Dst: 00:00:00:00:00:00
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      User Datagram Protocol, Src Port: 52752, Dst Port: 14550
      MAVLink Protocol (55)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 43
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 58
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: GPS_RAW_INT (24)
          Payload: GPS_RAW_INT (24)
              time_usec (uint64_t) [us]: 1583721000 (1583.721000 s)
              fix_type (GPS_FIX_TYPE): GPS_FIX_TYPE_3D_FIX (3)
              lat (int32_t) [degE7]: 514783466 (51.4783466 deg)
              lon (int32_t) [degE7]: -25922214 (-2.5922214 deg)
              alt (int32_t) [mm]: 56900
              eph (uint16_t*1E-2): 2.33
              epv (uint16_t*1E-2): 1.78
              vel (uint16_t) [cm/s]: 0
              cog (uint16_t) [cdeg]: 0
              satellites_visible (uint8_t): 16
          Message CRC: 0x1911
      
  
    ''',
  })
# ---
# name: test_wlua[common.xml-file_transfer_protocol.pcapng]
  dict({
    'returncode': 0,
    'stderr': '',
    'stdout': '''
      Frame 1: 139 bytes on wire (1112 bits), 139 bytes captured (1112 bits) on interface \Device\NPF_Loopback, id 0
      Null/Loopback
      Internet Protocol Version 4, Src: 127.0.0.1, Dst: 127.0.0.1
      User Datagram Protocol, Src Port: 50261, Dst Port: 14550
      MAVLink Protocol (107)
          Header
              Magic value / version: MAVLink 2.0 (0xfd)
              Payload length: 95
              Incompatibility flag: 0x00 (0)
              Compatibility flag: 0x00 (0)
              Packet sequence: 35
              System id: 1
              Component id: MAV_COMP_ID_AUTOPILOT1 (1)
              Message id: FILE_TRANSFER_PROTOCOL (110)
          Payload: FILE_TRANSFER_PROTOCOL (110)
              target_network (uint8_t): 0
              target_system (uint8_t): 255
              target_component (uint8_t): 230
              payload (uint8_t[251])
                  seq_number: 142
                  payload_session: 1
                  opcode: MAV_FTP_OPCODE_ACK (128)
                  payload_size: 80
                  req_opcode: MAV_FTP_OPCODE_BURSTREADFILE (15)
                  burst_complete: 0
                  payload_offset: 11120
                  payload_data: cdcc4c3e0374414646494e495459000000000194535243
          Message CRC: 0xb843
      
  
    ''',
  })
# ---
